--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Tell me a joke</title>
   </head>
   <body>
     <div id="root"></div>
